--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ p.web-designer{
 	background-color: #e5f9f5;
 	padding-top: 50px;
 	padding-bottom: 70px;
-	width: 1200px;
+/*	width: 1200px; */
 	margin: auto;
 }
 
